--- a/Project 4/Readme
+++ b/Project 4/Readme
@@ -1,2 +1,2 @@
 Download files P4init; P4_track; raceStat; FinalRace; and Project_4_Simulation 
-Run FinalRace to get all race statistics-- Right now my car is only running 10 laps and the SOC is reaching 100% i'm trying to fix logic for that 
+Run FinalRace to get all race statistics
